--- a/src/Util/dr.properties
+++ b/src/Util/dr.properties
@@ -1,6 +1,6 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.104.21:3306/test?characterEncoding=utf-8
-username=bbs
+url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
+username=root
 password=123456
 initialSize=5
 maxActive=10
